用线程池处理测试用例，提高性能